[tool.poetry]
name = "obstetric-anaesth-calc"
version = "0.1.0"
description = ""
authors = ["EgorVjalkov <e.vjalkov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
bot = "obstetric_anaesth_calc.bot_main:bot_run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
